--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,3 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
-javac.debug=true
-javadoc.preview=true
+file.reference.messenger.jar=C:\\Users\\student\\Desktop\\BrownRiveraPDA\\lib\\messenger.jar
 user.properties.file=C:\\Users\\student\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
