--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=MVCExample
+application.title=BrownRiveraPDA
 application.vendor=Roger
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,15 +25,18 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MVCExample.jar
+dist.jar=${dist.dir}/BrownRiveraPDA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.messenger.jar=lib/messenger.jar
+file.reference.messenger.jar-1=lib\\messenger.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.messenger.jar}
+    ${file.reference.messenger.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.messenger.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
